--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-### Java template
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.idea/workspace.xml
 .idea/libraries
-target
 
-# Package Files #
-*.jar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Created by .ignore support plugin (hsz.mobi)
+target/
+dependency-reduced-pom.xml
